welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
override def run(){
	trouveChemin()
}

def isFacingTrail():Boolean = {
  if (!estFaceMur){
  	avance()
 	  if (getCouleurSol()==Color.green){
 	    return true;
      recule();
  	}
	  else{
  	  recule();
    	return false;
  	}
  	}
  	else{
    	return false
  	}
	}    

def trouveChemin(){
	while(!estSurBiscuit){
    if (isFacingTrail==true){
      avance()
    }
    else{
      droite()
    }
  }
}
